added semantic html and css comments

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <!-- Hero image, linked in css -->
-    <div class="hero" title="Horiseon Hero"></div>
+    <figure class="hero" title="Horiseon Hero"></figure>
 
     <section class="content">
 
